Changed the UI of the dashboard

--- a/index.html
+++ b/index.html
@@ -9,44 +9,53 @@
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
 </head>
 <body>
-  <div class="container">
-    <h1>Color Classifier</h1>
-    <p class="subtitle">This demo recognizes colors from the camera. Lighting affects results.</p>
-
-    <div class="card">
-      <div class="controls">
-        <button id="startBtn">Start Camera</button>
-        <button id="stopBtn" disabled>Stop Camera</button>
+  <div class="app">
+    <!-- LEFT PANEL -->
+    <div class="left-panel">
+      <div class="header">
+        <h1>🎨 Color Classifier</h1>
+        <p class="subtitle">Real-time color detection powered by ML</p>
       </div>
 
-      <div class="grid">
-        <div class="panel">
-          <div id="webcamContainer" class="webcam"></div>
-          <div id="status" class="status">Camera is off</div>
+      <div class="controls">
+        <button id="startBtn">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><polygon points="5 3 19 12 5 21 5 3"/></svg>
+          Start Camera
+        </button>
+        <button id="stopBtn" disabled>
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><rect x="6" y="6" width="12" height="12" rx="2"/></svg>
+          Stop Camera
+        </button>
+      </div>
+
+      <!-- Detected Color -->
+      <div class="detected-card">
+        <div class="detected-header">
+          <span class="card-label">Detected Color</span>
+          <span id="topConf" class="confidence-badge">—</span>
         </div>
+        <div id="topLabel" class="detected-value">—</div>
+        <div id="colorSwatch" class="color-swatch"></div>
+      </div>
 
-        <div class="panel">
-          <div class="top">
-            <div class="label">Detected Color</div>
-            <div id="topLabel" class="value">—</div>
-            <div id="topConf" class="conf">—</div>
-          </div>
+      <!-- Probabilities -->
+      <div class="prob-card">
+        <span class="card-label">All Probabilities</span>
+        <div id="probList" class="prob-list"></div>
+      </div>
 
-          <div class="prob-card">
-            <div class="label">All Probabilities</div>
-            <div id="probList" class="prob-list"></div>
-          </div>
-
-          <div class="tip">
-            Tip: Hold a big colored object close to the camera for clearer results.
-          </div>
-        </div>
+      <div class="tip">
+        💡 Hold a solid-colored object close to the camera for best results.
       </div>
     </div>
 
-    <p class="footer">
-      If the camera doesn’t work when opening the file directly, run a local server.
-    </p>
+    <!-- RIGHT PANEL (Camera) -->
+    <div class="right-panel">
+      <div class="camera-wrapper">
+        <div id="webcamContainer" class="webcam"></div>
+        <div id="status" class="status-badge">Camera is off</div>
+      </div>
+    </div>
   </div>
 
   <script src="app.js"></script>
